# EmergencyMuteButton

./: Cargo.toml  README.md
src/: audio.rs  auditpol.rs  main.rs  service.rs  win32.rs  win_event.rs
wix/: License.rtf  main.wxs
