[package]
name = "EmergencyMuteButton"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.4.7"
log = "0.4.27"
quick-xml = "0.38.0"
windows = { version = "0.61.3", features = ["Wdk_System_SystemServices", "Win32_System_EventLog", "Win32_System_Memory", "Win32_System_Com", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Foundation", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }
